src-ken&y/objects/Supplier_1099_File_Map__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Mapping settings for 1099 eFile fields</description>
    <fields>
        <fullName>Behavior__c</fullName>
        <label>DEPRECATED</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Position__c</fullName>
        <label>DEPRECATED</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>DEPRECATED</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Filters__c</fullName>
        <label>DEPRECATED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Justify__c</fullName>
        <label>DEPRECATED</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>DEPRECATED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Position__c</fullName>
        <label>DEPRECATED</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Static_Value__c</fullName>
        <label>DEPRECATED</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>DEPRECATED</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>DEPRECATED</label>
</CustomObject>